# ClassSynchroniseurMultiVideo

./: .gitignore  CMakeLists.txt  README.md  SynchroniseurMultiVideo.cpp  SynchroniseurMultiVideo.h  main.cpp  sequence.mmd
docs/: Doxyfile
docs/source/: conf.py  index.rst
docs/xml/: Doxyfile.xml  SynchroniseurMultiVideo_8cpp.xml  SynchroniseurMultiVideo_8h.xml  _synchroniseur_multi_video_8cpp.xml  _synchroniseur_multi_video_8h.xml  classSynchroniseurMultiVideo.xml  class_synchroniseur_multi_video.xml  deprecated.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dir_d86fe2cd60c9c6f9c688382c70563f5f.xml  index.xml  main_8cpp.xml  namespacestd.xml  structSynchroniseurMultiVideo_1_1InfoVideo.xml  struct_synchroniseur_multi_video_1_1_info_video.xml  todo.xml
include/ClassAfficheurVideo/: AfficheurVideo.cpp  AfficheurVideo.h
include/ClassSynchroniseurMultiVideo/: SynchroniseurMultiVideo.h
src/: SynchroniseurMultiVideo.cpp  main.cpp
